# backend-fastapi-template

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  conftest.py  database.toml  db.config.json  docker-compose.yml  lifetime.py  main.py  metadata.json  pyproject.toml  releaser.toml  requirements.txt  settings.py
.devcontainer/: devcontainer.json
app/: lifetime.py  main.py  settings.py
app/cache/: dependency.py  lifetime.py
app/db/: base.py  utils.py
app/db/models/: __init__.py  notes.py  sql_models.py  tenant.py
app/tests/: test_fastapi_v1.py
core/: logging.py  monitoring.py
db/: __init__.py  base.py  dependencies.py  meta.py  models.py  utils.py
db/models/: administrator.py
routes/: __init__.py  api.py  predictor.py
scripts/: dev.sh  run_coverage.sh
tests/: test_fastapi_v1.py
