[tool.poetry]
name = "test4"
version = "0.1.0"
description = "fastapiv2"
authors = ["Pradeep (pky15061992@gmail.com)"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.96.0"
uvicorn = "0.21.1"
pydantic = "^1.3"
requests = "^2.22.0"
loguru = "^0.7.0"
joblib = "^1.2.0"
yarl = "^1.9.2"
ujson = "^5.7.0"
SQLAlchemy = {version = "^2.0.0", extras = ["asyncio"]}
asyncpg = {version = "^0.27.0", extras = ["sa"]}
redis = {version = "^4.4.2", extras = ["hiredis"]}
httptools = "^0.5.0"
greenlet = "^2.0.2"
coverage = "^7.2.1"
prometheus-fastapi-instrumentator="^6.0.0"

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^2.0.0"
ipdb = "^0.13.0"
pylint = "^2.15.8"
httpx = "^0.23.3"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
trio = "^0.21"
fakeredis = "^2.5.0"

[tool.poetry.group.aws]
optional = true

[tool.poetry.group.aws.dependencies]
mangum = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''